half chat page done

--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -4,6 +4,7 @@ $border-light: #efefef;
 $border-dark: #212a41;
 $primaryDark: #12192c;
 $font-light: #6f6f6f;
+$font-light2: #02071d;
 $font-dark: #90949b;
 $hover-light: #37b58f;
 $hover-dark: #76b1e7;
