--- a/src/assets/scss/_message.scss
+++ b/src/assets/scss/_message.scss
@@ -1,67 +1,91 @@
 .messagePageWrapper {
-    min-height: 91vh;
-    background-color: $bg-light;
-    display: flex;
-    justify-content: center;
+  min-height: 91vh;
+  background-color: $bg-light;
+  display: flex;
+  justify-content: center;
 
-    .users {
-        flex: 2;
-        border: 1px solid;
-        width: 100%;
-        padding: 1rem;
+  .users {
+    flex: 2;
+    border: 1px solid;
+    width: 100%;
+    padding: 1rem;
+    background-color: $white;
+    .searchwrapper {
+      display: flex;
+      align-items: center;
+      border: 1px solid $border-light;
+      border-radius: 0.6rem;
+      background-color: $inner-light;
+      padding: 0.4rem;
+      &::placeholder {
+        font-weight: 400;
+      }
+      .searchuser {
+        width: 90%;
+        .usersearch {
+          border: 0;
+          background-color: transparent;
+          width: 100%;
+          margin: 0;
+          font-weight: 400;
+        }
+      }
+      .icon {
+        cursor: pointer;
+        font-size: 1.9rem;
+        color: $icon-light;
+        @include centerByFlex;
+        margin-left: 0.5rem;
         background-color: $white;
-        .searchwrapper {
-            display: flex;
-            align-items: center;
-            border: 1px solid $border-light;
-            border-radius: 1rem;
-            background-color: $inner-light;
-            &::placeholder{
-                font-weight: 400;
-            }
-            .searchuser {
-                width: 90%;
-                .usersearch {
-                    border: 0;
-                    background-color: transparent;
-                    width: 100%;
-                    margin: 0;
-                }
-            }
-            .icon{
-                cursor: pointer;
-                font-size: 1.9rem;
-                color: $icon-light;
-                @include centerByFlex;
-                margin-left: 0.5rem;
-                background-color: $white;
-                border: 1px solid $border-light;
-                padding: 0.4rem;
-                border-radius: 0.6rem;
-            }
-        }
-        .users1 {
-            display: flex;
-            align-items: center;
-
-            .name {
-                margin-left: 0.8rem;
-            }
-        }
+        border: 1px solid $border-light;
+        padding: 0.6rem;
+        border-radius: 0.6rem;
+      }
     }
+    .chatheads {
+      padding: 1.2rem 0rem;
+      .users1 {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        padding: 1.2rem 0.9rem;
+        border-bottom: 1px solid $border-light;
+        margin: 0.5rem 0;
+        .icon{
+            font-size: 3.2rem;
+            height: 5rem;
+            width: 5rem;
+            font-size: 0;
+            border-radius: 50%;
+            overflow: hidden;
+            img{
+                margin: 0;
 
-    .chatsection {
-        flex: 5;
-        border: 1px solid;
-        width: 100%;
-
-        .header1 {
-            display: flex;
-            justify-content: space-between;
-
-            .mm {
-                display: flex;
+                height: 100%;
+                width: 100%;
             }
         }
+        .name {
+            color: $font-light2;
+          margin-left: 0.9rem;
+          font-size: 1.9rem;
+        }
+      }
     }
+  }
+
+  .chatsection {
+    flex: 5;
+    border: 1px solid;
+    width: 100%;
+
+    .header1 {
+      display: flex;
+      justify-content: space-between;
+
+      .mm {
+        display: flex;
+      }
+    }
+  }
 }
