message page completed

--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -17,5 +17,7 @@ $button-bg: #0b9cfc;
 $button-bg-hover: #0788df;
 $text-fade:#A6A6A6;
 $icon-light:#0095ff;
+$icon-light2:#9ed0f33d;
 $icon-dark:#746CFE;
+$scrollbar-light:rgba(0, 140, 255, 0.164);
 
