--- a/src/assets/scss/_message.scss
+++ b/src/assets/scss/_message.scss
@@ -1,4 +1,4 @@
-.messagePageWrapper {
+.LIGHT-messagePageWrapper {
   min-height: 91vh;
   background-color: $bg-light;
   display: flex;
@@ -44,6 +44,15 @@
     }
     .chatheads {
       padding: 1.2rem 0rem;
+      overflow-y: auto;
+      max-height: calc(100vh - 12rem);
+      &::-webkit-scrollbar {
+        width: 0.9rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: $scrollbar-light;
+      }
       .users1 {
         cursor: pointer;
         display: flex;
@@ -77,12 +86,17 @@
   .chatsection {
     flex: 5;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     .header1 {
       display: flex;
+      flex: 1;
       justify-content: space-between;
       align-items: center;
       padding: 0.6rem 2rem;
       border-bottom: 1px solid $border-light;
+      background-color: $white;
+      max-height: 8rem;
       .mm {
         display: flex;
         align-items: center;
@@ -94,22 +108,312 @@
           border-radius: 50%;
           overflow: hidden;
         }
-        .name{
-            margin-left: 1rem;
-            font-size: 1.6rem;
+        .name {
+          margin-left: 1rem;
+          font-size: 1.6rem;
         }
       }
-      .nn{
+      .nn {
         background-color: $white;
         border: 1px solid $border-light;
         padding: 0.9rem;
         border-radius: 8px;
         @include centerByFlex;
         cursor: pointer;
-        .call{
-            font-size: 2rem;
-            transform: rotate(270deg);
+        color: $icon-light;
+        transition: 0.5s;
+        &:hover{
+          background-color: $icon-light;
+          color: $white;
         }
+        .call {
+          font-size: 2rem;
+          transform: rotate(270deg);
+        }
+      }
+    }
+    .message-area {
+      flex: 7;
+      padding: 2rem 1rem;
+      overflow-y: auto;
+      max-height: calc(100vh - 20rem);
+      &::-webkit-scrollbar {
+        width: 0.9rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: $scrollbar-light;
+      }
+      .incoming {
+        justify-content: start;
+        .message {
+          background-color: $icon-light;
+        }
+      }
+      .outgoing {
+        justify-content: end;
+        .message {
+          background-color: $icon-dark;
+        }
+      }
+      .msgrow {
+        display: flex;
+        margin: 0.5rem 0;
+        .message {
+          min-width: 10rem;
+          max-width: 50rem;
+          padding: 1rem;
+          border-radius: 8px;
+          color: $white;
+          font-size: 1.5rem;
+          font-weight: 400;
+        }
+
+        .timerow {
+          display: flex;
+          justify-content: end;
+          margin-top: 0.7rem;
+          font-size: 1rem;
+        }
+      }
+    }
+    .msgbox {
+      flex: 1;
+      max-height: 8rem;
+      background-color: $white;
+      border-top: 1px solid $border-light;
+      display: flex;
+      align-items: center;
+      padding: 0.9rem 2rem;
+      .msg5 {
+        margin: 0;
+        width: 95%;
+        border: 0;
+        outline: 0;
+        background-color: $icon-light2;
+        padding: 1.5rem;
+        border: 1px solid $border-light;
+      }
+      .sendicon {
+        padding: 0.7rem;
+        font-size: 3rem;
+        @include centerByFlex;
+        background-color: $icon-light;
+        margin-left: 0.5rem;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+    }
+  }
+}
+.DARK-messagePageWrapper {
+  min-height: 91vh;
+  background-color: $bg-dark;
+  display: flex;
+  justify-content: center;
+
+  .users {
+    flex: 2;
+    width: 100%;
+    padding: 1rem;
+    border-right: 1px solid $border-dark;
+    background-color: $primaryDark;
+    .searchwrapper {
+      display: flex;
+      align-items: center;
+      border: 1px solid $border-dark;
+      border-radius: 0.6rem;
+      background-color: $inner-dark;
+      padding: 0.4rem;
+      &::placeholder {
+        font-weight: 400;
+      }
+      .searchuser {
+        width: 90%;
+        .usersearch {
+          border: 0;
+          background-color: transparent;
+          width: 100%;
+          margin: 0;
+          font-weight: 400;
+          color: $white;
+        }
+      }
+      .icon {
+        cursor: pointer;
+        font-size: 1.9rem;
+        color: $icon-dark;
+        @include centerByFlex;
+        margin-left: 0.5rem;
+        background-color: $primaryDark;
+        border: 1px solid $border-dark;
+        padding: 0.6rem;
+        border-radius: 0.6rem;
+      }
+    }
+    .chatheads {
+      padding: 1.2rem 0rem;
+      overflow-y: auto;
+      max-height: calc(100vh - 12rem);
+      &::-webkit-scrollbar {
+        width: 0.9rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: $scrollbar-light;
+      }
+      .users1 {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        padding: 1.2rem 0.9rem;
+        border-bottom: 1px solid $border-dark;
+        margin: 0.5rem 0;
+        .icon {
+          font-size: 3.2rem;
+          height: 5rem;
+          width: 5rem;
+          font-size: 0;
+          border-radius: 50%;
+          overflow: hidden;
+          img {
+            margin: 0;
+
+            height: 100%;
+            width: 100%;
+          }
+        }
+        .name {
+          color: $white;
+          margin-left: 0.9rem;
+          font-size: 1.9rem;
+        }
+      }
+    }
+  }
+
+  .chatsection {
+    flex: 5;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .header1 {
+      display: flex;
+      flex: 1;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.6rem 2rem;
+      border-bottom: 1px solid $border-dark;
+      background-color: $primaryDark;
+      max-height: 8rem;
+      .mm {
+        display: flex;
+        align-items: center;
+        .icon {
+          font-size: 3.2rem;
+          height: 4.9rem;
+          width: 4.9rem;
+          font-size: 0;
+          border-radius: 50%;
+          overflow: hidden;
+        }
+        .name {
+          margin-left: 1rem;
+          font-size: 1.6rem;
+          color: $white;
+        }
+      }
+      .nn {
+        background-color: $primaryDark;
+        
+        border: 1px solid $border-dark;
+        padding: 0.9rem;
+        border-radius: 8px;
+        @include centerByFlex;
+        cursor: pointer;
+        color: $icon-dark;
+        transition: 0.5s;
+        &:hover{
+          background-color: $icon-dark;
+          color: $white;
+        }
+        .call {
+          font-size: 2rem;
+          transform: rotate(270deg);
+        }
+      }
+    }
+    .message-area {
+      flex: 7;
+      padding: 2rem 1rem;
+      overflow-y: auto;
+      max-height: calc(100vh - 20rem);
+      &::-webkit-scrollbar {
+        width: 0.9rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: $scrollbar-light;
+      }
+      .incoming {
+        justify-content: start;
+        .message {
+          background-color: $icon-dark;
+        }
+      }
+      .outgoing {
+        justify-content: end;
+        .message {
+          background-color: $icon-dark;
+        }
+      }
+      .msgrow {
+        display: flex;
+        margin: 0.5rem 0;
+        .message {
+          min-width: 10rem;
+          max-width: 50rem;
+          padding: 1rem;
+          border-radius: 8px;
+          color: $white;
+          font-size: 1.5rem;
+          font-weight: 400;
+        }
+
+        .timerow {
+          display: flex;
+          justify-content: end;
+          margin-top: 0.7rem;
+          font-size: 1rem;
+        }
+      }
+    }
+    .msgbox {
+      flex: 1;
+      max-height: 8rem;
+      background-color: $primaryDark;
+      border-top: 1px solid $border-dark;
+      display: flex;
+      align-items: center;
+      padding: 0.9rem 2rem;
+      .msg5 {
+        margin: 0;
+        width: 95%;
+        border: 0;
+        outline: 0;
+        background-color: $icon-light2;
+        padding: 1.5rem;
+        border: 1px solid $border-dark;
+        color: $white;
+      }
+      .sendicon {
+        padding: 0.7rem;
+        font-size: 3rem;
+        @include centerByFlex;
+        background-color: $icon-dark;
+        margin-left: 0.5rem;
+        border-radius: 8px;
+        cursor: pointer;
       }
     }
   }
