--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -17,7 +17,12 @@ $button-bg: #0b9cfc;
 $button-bg-hover: #0788df;
 $text-fade:#A6A6A6;
 $icon-light:#0095ff;
-$icon-light2:#9ed0f33d;
+$icon-light2:#3950613d;
 $icon-dark:#746CFE;
 $scrollbar-light:rgba(0, 140, 255, 0.164);
-
+$message-outgoing-light:#03b0fd;
+$message-incoming-light:#7241ff;
+$message-outgoing-dark:#5851DB;
+$message-incoming-dark:#242d42;
+$input-bg-light: rgb(233, 233, 233);
+$input-bg-dark: #1a2235;
