--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -35,6 +35,7 @@
             position: relative;
             cursor: pointer;
             .dropmenu{
+              box-shadow: 1px 1px 14px $primaryDark;
               right: 100%;
               position: absolute;
               background-color: $primaryDark;
@@ -116,6 +117,7 @@
             position: relative;
             cursor: pointer;
             .dropmenu{
+              box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.158);
               right: 100%;
               position: absolute;
               background-color: $white;
