--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -1,6 +1,6 @@
-$bg-light: #f9fafb;
+$bg-light: #f5f5f5;
 $bg-dark: #1a2235;
-$border-light: #efefef;
+$border-light: #ebe7e7;
 $border-dark: #212a41;
 $primaryDark: #12192c;
 $font-light: #6f6f6f;
