settings page constructed

--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -5,7 +5,8 @@ $border-dark: #212a41;
 $primaryDark: #12192c;
 $font-light: #6f6f6f;
 $font-light2: #02071d;
-$font-dark: #b8b9bb;
+$font-dark: #d3d3d3;
+$font-dark2: #acacac;
 $hover-light: #37b58f;
 $hover-dark: #76b1e7;
 $inner-light: #e7f4fd;
