--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -28,20 +28,85 @@
           color: $white;
           padding: 1.2rem 0.7rem;
         }
-        p{
-            font-size: 1.2rem;
-            margin-top: 0.8rem;
-            color: $font-dark2;
+        p {
+          font-size: 1.2rem;
+          margin-top: 0.8rem;
+          color: $font-dark2;
         }
       }
-      .btnrow{
+      .btnrow {
         @include centerByFlex;
         justify-content: end;
-        button{
-            background-color: $icon-dark;
-            margin-right: 0;
+        button {
+          background-color: $icon-dark;
+          margin-right: 0;
         }
       }
+    }
+    .toggle-switch {
+      position: relative;
+      width: 65px;
+      display: inline-block;
+      text-align: left;
+    }
+    .checkbox {
+      display: none;
+    }
+    .label {
+      display: block;
+      overflow: hidden;
+      cursor: pointer;
+      border: 0 solid #bbb;
+      border-radius: 20px;
+    }
+    .inner {
+      display: block;
+      width: 200%;
+      margin-left: -100%;
+      transition: margin 0.3s ease-in 0s;
+    }
+    .inner:before,
+    .inner:after {
+      float: left;
+      width: 50%;
+      height: 2.5rem;
+      padding: 0;
+      line-height: 2.5rem;
+      color: #fff;
+      font-weight: bold;
+      box-sizing: border-box;
+    }
+    .inner:before {
+      content: " ";
+      padding-left: 10px;
+      background-color: #746cfe;
+      color: #fff;
+    }
+    .inner:after {
+      content: " ";
+      padding-right: 10px;
+      background-color: #bbb;
+      color: #fff;
+      text-align: right;
+    }
+    .switch {
+      display: block;
+      width: 15px;
+      margin: 5px;
+      background: #fff;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 40px;
+      border: 0 solid #bbb;
+      border-radius: 20px;
+      transition: all 0.3s ease-in 0s;
+    }
+    .checkbox:checked + .label .inner {
+      margin-left: 0;
+    }
+    .checkbox:checked + .label .switch {
+      right: 0px;
     }
   }
 }
@@ -75,20 +140,85 @@
           color: $font-light2;
           padding: 1.2rem 0.7rem;
         }
-        p{
-            font-size: 1.2rem;
-            margin-top: 0.8rem;
-            color: $font-dark2;
+        p {
+          font-size: 1.2rem;
+          margin-top: 0.8rem;
+          color: $font-dark2;
         }
       }
-      .btnrow{
+      .btnrow {
         @include centerByFlex;
         justify-content: end;
-        button{
-            background-color: $icon-light;
-            margin-right: 0;
+        button {
+          background-color: $icon-light;
+          margin-right: 0;
         }
       }
+    }
+    .toggle-switch {
+      position: relative;
+      width: 65px;
+      display: inline-block;
+      text-align: left;
+    }
+    .checkbox {
+      display: none;
+    }
+    .label {
+      display: block;
+      overflow: hidden;
+      cursor: pointer;
+      border: 0 solid #bbb;
+      border-radius: 20px;
+    }
+    .inner {
+      display: block;
+      width: 200%;
+      margin-left: -100%;
+      transition: margin 0.3s ease-in 0s;
+    }
+    .inner:before,
+    .inner:after {
+      float: left;
+      width: 50%;
+      height: 2.5rem;
+      padding: 0;
+      line-height: 2.5rem;
+      color: #fff;
+      font-weight: bold;
+      box-sizing: border-box;
+    }
+    .inner:before {
+      content: " ";
+      padding-left: 10px;
+      background-color: #746cfe;
+      color: #fff;
+    }
+    .inner:after {
+      content: " ";
+      padding-right: 10px;
+      background-color: #bbb;
+      color: #fff;
+      text-align: right;
+    }
+    .switch {
+      display: block;
+      width: 15px;
+      margin: 5px;
+      background: #fff;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 40px;
+      border: 0 solid #bbb;
+      border-radius: 20px;
+      transition: all 0.3s ease-in 0s;
+    }
+    .checkbox:checked + .label .inner {
+      margin-left: 0;
+    }
+    .checkbox:checked + .label .switch {
+      right: 0px;
     }
   }
 }
