--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -4,6 +4,7 @@
     padding: 1.5rem 1.2rem;
     border: 1px solid $border-dark;
     border-radius: 2rem;
+    margin: 1rem 0;
     .head {
       display: flex;
       justify-content: space-between;
@@ -129,6 +130,7 @@
     padding: 1.5rem 1.2rem;
     border: 1px solid $border-light;
     border-radius: 2rem;
+    margin: 1rem 0;
     .head {
       display: flex;
       justify-content: space-between;
