--- a/src/assets/scss/_imageEditor.scss
+++ b/src/assets/scss/_imageEditor.scss
@@ -186,3 +186,58 @@
     }
   }
 }
+.DARK-postImageContainer {
+  position: relative;
+  height: 0.1rem;
+  .overlayContainer {
+    z-index: 9;
+    position: fixed;
+    backdrop-filter: blur(7px) saturate(180%);
+    -webkit-backdrop-filter: blur(7px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.04);
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    @include centerByFlex;
+    .middlebox {
+      border: 1px solid $border-dark;
+      background-color: $white;
+      padding: 0.9rem;
+      border-radius: 10px;
+      background-color: $bg-dark;
+      overflow: hidden;
+      img{
+        height: 20rem;
+        width: 66rem;
+        object-fit: contain;
+      }
+      textarea{
+        margin: 0;
+        width: 100%;
+        height: 11rem;
+        resize: none;
+        // background-color: rgba($color: $inner-dark, $alpha: 0.45);
+        background-color: transparent;
+        border: none;
+        color: $font-dark;
+        white-space: pre-wrap;
+        &::-webkit-scrollbar {
+          width: 0.5rem;
+        }
+        &::-webkit-scrollbar-thumb {
+          border-radius: 10px;
+          background-color: $scrollbar-light;
+        }
+      }
+      
+      .btn{
+        display: flex;
+        justify-content: end;
+        button{
+          background-color: $icon-dark;
+        }
+      }
+    }
+  }
+}
